# MultithreadedCircleArea

./: CMakeLists.txt  multithreading.cpp
